--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div>
         <label for="email">Email</label>
-        <input type="email" name="email" id="email" placeholder="Email goes here...">
+        <input type="text" name="email" id="email" placeholder="Email goes here...">
     </div>
     <br>
     <div>How did you hear about me?</div>
